--- a/p2/exp1/CMakeLists.txt
+++ b/p2/exp1/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 2.8.9)
 project(exp1)
  
 # -O2 will make the race condition difficult to manifest. but it's there!
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g -Wall -Wextra -pthread")
+#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g -Wall -Wextra -pthread")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -g -Wall -Wextra -pthread")
 
 # activate with cmake . -DCMAKE_ENV=aarch64
 if(CMAKE_ENV STREQUAL "aarch64")
@@ -42,3 +43,4 @@ add_executable(counter-nolock
   ${COMMON_SOURCES}
 )        
 # ------------------------------------- #
+
