--- a/p2/exp2/Makefile
+++ b/p2/exp2/Makefile
@@ -111,6 +111,19 @@ depend:
 .PHONY : depend
 
 #=============================================================================
+# Target rules for targets named list-hash_biglock
+
+# Build rule for target.
+list-hash_biglock: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 list-hash_biglock
+.PHONY : list-hash_biglock
+
+# fast build rule for target.
+list-hash_biglock/fast:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/build
+.PHONY : list-hash_biglock/fast
+
+#=============================================================================
 # Target rules for targets named list-pmla
 
 # Build rule for target.
@@ -207,6 +220,7 @@ SortedList.o: SortedList.c.o
 
 # target to build an object file
 SortedList.c.o:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/SortedList.c.o
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/SortedList.c.o
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/SortedList.c.o
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/SortedList.c.o
@@ -222,6 +236,7 @@ SortedList.i: SortedList.c.i
 
 # target to preprocess a source file
 SortedList.c.i:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/SortedList.c.i
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/SortedList.c.i
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/SortedList.c.i
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/SortedList.c.i
@@ -237,6 +252,7 @@ SortedList.s: SortedList.c.s
 
 # target to generate assembly for a file
 SortedList.c.s:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/SortedList.c.s
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/SortedList.c.s
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/SortedList.c.s
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/SortedList.c.s
@@ -252,6 +268,7 @@ common.o: common.c.o
 
 # target to build an object file
 common.c.o:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/common.c.o
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/common.c.o
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/common.c.o
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/common.c.o
@@ -267,6 +284,7 @@ common.i: common.c.i
 
 # target to preprocess a source file
 common.c.i:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/common.c.i
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/common.c.i
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/common.c.i
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/common.c.i
@@ -282,6 +300,7 @@ common.s: common.c.s
 
 # target to generate assembly for a file
 common.c.s:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/common.c.s
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/common.c.s
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/common.c.s
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/common.c.s
@@ -317,6 +336,33 @@ hash.s: hash.c.s
 hash.c.s:
 	$(MAKE) -f CMakeFiles/list-hash.dir/build.make CMakeFiles/list-hash.dir/hash.c.s
 .PHONY : hash.c.s
+
+hash_biglock.o: hash_biglock.c.o
+
+.PHONY : hash_biglock.o
+
+# target to build an object file
+hash_biglock.c.o:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/hash_biglock.c.o
+.PHONY : hash_biglock.c.o
+
+hash_biglock.i: hash_biglock.c.i
+
+.PHONY : hash_biglock.i
+
+# target to preprocess a source file
+hash_biglock.c.i:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/hash_biglock.c.i
+.PHONY : hash_biglock.c.i
+
+hash_biglock.s: hash_biglock.c.s
+
+.PHONY : hash_biglock.s
+
+# target to generate assembly for a file
+hash_biglock.c.s:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/hash_biglock.c.s
+.PHONY : hash_biglock.c.s
 
 list.o: list.c.o
 
@@ -366,6 +412,7 @@ measure.o: measure.c.o
 
 # target to build an object file
 measure.c.o:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/measure.c.o
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/measure.c.o
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/measure.c.o
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/measure.c.o
@@ -381,6 +428,7 @@ measure.i: measure.c.i
 
 # target to preprocess a source file
 measure.c.i:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/measure.c.i
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/measure.c.i
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/measure.c.i
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/measure.c.i
@@ -396,6 +444,7 @@ measure.s: measure.c.s
 
 # target to generate assembly for a file
 measure.c.s:
+	$(MAKE) -f CMakeFiles/list-hash_biglock.dir/build.make CMakeFiles/list-hash_biglock.dir/measure.c.s
 	$(MAKE) -f CMakeFiles/list-pmla.dir/build.make CMakeFiles/list-pmla.dir/measure.c.s
 	$(MAKE) -f CMakeFiles/list-pml.dir/build.make CMakeFiles/list-pml.dir/measure.c.s
 	$(MAKE) -f CMakeFiles/list-pm.dir/build.make CMakeFiles/list-pm.dir/measure.c.s
@@ -412,6 +461,7 @@ help:
 	@echo "... clean"
 	@echo "... depend"
 	@echo "... rebuild_cache"
+	@echo "... list-hash_biglock"
 	@echo "... list-pmla"
 	@echo "... list-pml"
 	@echo "... list-pm"
@@ -429,6 +479,9 @@ help:
 	@echo "... hash.o"
 	@echo "... hash.i"
 	@echo "... hash.s"
+	@echo "... hash_biglock.o"
+	@echo "... hash_biglock.i"
+	@echo "... hash_biglock.s"
 	@echo "... list.o"
 	@echo "... list.i"
 	@echo "... list.s"
